# bld

./: .cz.toml  .gitignore  .vimspector.json  .vimspector.session  Cargo.toml  Licence.md  Readme.md  compose.yaml  diesel.toml  rustfmt.toml
bld_commands/: Cargo.toml
bld_commands/src/: cli.rs  lib.rs
bld_commands/src/auth/: command.rs  method.rs
bld_commands/src/config/: command.rs
bld_commands/src/hist/: command.rs
bld_commands/src/init/: command.rs
bld_commands/src/inspect/: command.rs
bld_commands/src/list/: command.rs
bld_commands/src/monit/: client.rs  command.rs
bld_commands/src/pull/: command.rs
bld_commands/src/push/: command.rs
bld_commands/src/remove/: command.rs
bld_commands/src/run/: adapter.rs  command.rs  invoke.rs  mod.rs
bld_commands/src/server/: command.rs
bld_commands/src/stop/: command.rs
bld_commands/src/supervisor/: command.rs
bld_commands/src/worker/: client.rs  command.rs
bld_ipc/: Cargo.toml
bld_ipc/src/: client.rs  lib.rs  message.rs  server.rs
bld_ipc/src/client/: mod.rs
bld_ipc/src/messages/: mod.rs
bld_ipc/src/server/: mod.rs
bld_rs/: Cargo.toml
bld_rs/src/: main.rs
bld_runner/: Cargo.toml
bld_runner/src/: lib.rs
bld_runner/src/context/: container.rs  machine.rs  mod.rs
bld_runner/src/socket/: client.rs  messages.rs  mod.rs
bld_runner/src/sync/: mod.rs  pipeline.rs  platform.rs  runner.rs
bld_supervisor/: Cargo.toml
bld_supervisor/src/: lib.rs  server.rs  supervisor.rs
bld_supervisor/src/base/: handle.rs  message.rs  mod.rs  queue.rs  read.rs  state.rs  write.rs
bld_supervisor/src/client/: mod.rs  server.rs  status.rs  unknown.rs  worker.rs  writer.rs
bld_supervisor/src/listeners/: mod.rs  new_streams.rs  servers.rs  workers.rs
bld_supervisor/src/queues/: mod.rs  worker_queue.rs
bld_supervisor/src/sockets/: mod.rs  queue.rs  server.rs  worker.rs  worker_client.rs
crates/bld_commands/: Cargo.toml
crates/bld_commands/src/: cli.rs  command.rs  lib.rs  signals.rs
crates/bld_commands/src/add/: command.rs
crates/bld_commands/src/auth/: command.rs  method.rs  mod.rs  oauth2.rs
crates/bld_commands/src/cat/: command.rs
crates/bld_commands/src/check/: command.rs
crates/bld_commands/src/config/: command.rs
crates/bld_commands/src/copy/: command.rs
crates/bld_commands/src/cron/: add.rs  cat.rs  command.rs  list.rs  mod.rs  remove.rs  update.rs  upsert.rs
crates/bld_commands/src/edit/: command.rs
crates/bld_commands/src/hist/: command.rs
crates/bld_commands/src/init/: command.rs
crates/bld_commands/src/inspect/: command.rs
crates/bld_commands/src/list/: command.rs
crates/bld_commands/src/monit/: command.rs
crates/bld_commands/src/move/: command.rs
crates/bld_commands/src/pull/: command.rs
crates/bld_commands/src/push/: command.rs
crates/bld_commands/src/remove/: command.rs
crates/bld_commands/src/run/: adapter.rs  command.rs  mod.rs
crates/bld_commands/src/server/: command.rs
crates/bld_commands/src/stop/: command.rs
crates/bld_commands/src/supervisor/: command.rs
crates/bld_commands/src/worker/: command.rs
crates/bld_config/: Cargo.toml
crates/bld_config/src/: auth.rs  database.rs  definitions.rs  docker.rs  errors.rs  lib.rs  libvirt.rs  local.rs  packages.rs  remote.rs  server.rs  ssh.rs  supervisor.rs  tls.rs
crates/bld_core/: Cargo.toml  dummy.db  sample.db
crates/bld_core/migrations/2021-12-13-183554_create_high_avail_storage/: down.sql  up.sql
crates/bld_core/migrations/2022-05-23-204227_alter_pipelines_to_pipeline_runs/: up.sql
crates/bld_core/migrations/2022-09-22-155815_add-container-info-table/: down.sql
crates/bld_core/migrations/2023-06-17-083830_create_cron_jobs_table/: up.sql
crates/bld_core/src/: auth.rs  fs.rs  lib.rs  logger.rs  regex.rs  scanner.rs  signals.rs  workers.rs
crates/bld_core/src/auth/: mod.rs
crates/bld_core/src/context/: local.rs  mod.rs  run.rs  server.rs
crates/bld_core/src/database/: connect.rs  cron_job_environment_variables.rs  cron_job_variables.rs  cron_jobs.rs  ha_client_serial_responses.rs  ha_client_status.rs  ha_hard_state.rs  ha_log.rs  ha_members.rs  ha_members_after_consensus.rs  ha_snapshot.rs  migrations.rs  (+6 more)
crates/bld_dtos/: Cargo.toml
crates/bld_dtos/src/: hist.rs  lib.rs  login.rs
crates/bld_entities/: Cargo.toml
crates/bld_entities/src/: lib.rs
crates/bld_http/: Cargo.toml
crates/bld_http/src/: lib.rs
crates/bld_migrations/: Cargo.toml
crates/bld_migrations/src/: lib.rs  m20230907_121524_create_ha_state_machine_table.rs  m20230907_134943_create_ha_client_serial_responses_table.rs  m20230907_150533_create_ha_client_status_table.rs  m20230907_152458_create_ha_hard_state_table.rs  m20230907_153905_create_ha_log_table.rs  m20230907_154545_create_ha_snapshot_table.rs  m20230907_155136_create_ha_members_table.rs  m20230907_155841_create_ha_members_after_consensus_table.rs  m20230907_181924_create_pipeline_table.rs  m20230907_182138_create_pipeline_runs_table.rs  m20230907_182418_create_pipeline_run_containers_table.rs  m20230907_190009_create_cron_jobs_table.rs  m20230907_190403_create_cron_job_variables_table.rs  m20230907_190709_create_cron_job_environment_variables_table.rs  m20240630_162930_login_attempts.rs  main.rs
crates/bld_models/: Cargo.toml
crates/bld_models/src/: lib.rs
crates/bld_runner/: Cargo.toml
crates/bld_runner/grammar/: expr_v3.pest
crates/bld_runner/src/: lib.rs  traits.rs
crates/bld_server/: Cargo.toml  build.rs
crates/bld_server/src/: lib.rs  server.rs
crates/bld_sock/: Cargo.toml
crates/bld_sock/src/: lib.rs  session.rs
crates/bld_supervisor/: Cargo.toml
crates/bld_supervisor/src/: lib.rs  supervisor.rs
crates/bld_ui/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json
crates/bld_ui/src/: api.rs  app.rs  context.rs  error.rs  main.rs  url.rs
crates/bld_ui/styles/: backgrounds.css  buttons.css  theme.css
crates/bld_ui/tailwind/: input.css  tailwind.config.js
crates/bld_utils/: Cargo.toml
crates/bld_utils/src/: fs.rs  lib.rs  request.rs  shell.rs  sync.rs  term.rs  tls.rs  variables.rs
(+837 files in other folders)
