[workspace]
members = [
  "bld_core",
  "bld_utils",
  "bld_config",
  "bld_supervisor",
  "bld_runner",
  "bld_server",
  "bld_commands"
]

[package]
name = "bld"
version = "0.1.0"
authors = ["Kostas Vlachos <kvl_93@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
bld_config = { path = "bld_config" }
bld_utils = { path = "bld_utils" }
bld_commands = { path = "bld_commands" }
clap = "2.33.3"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
