[package]
name = "bld"
version = "0.3.1"
authors = ["Kostas Vlachos <kvl_93@outlook.com>"]
edition = "2021"

[workspace]
members = [
    "crates/bld_utils",
    "crates/bld_config",
    "crates/bld_migrations",
    "crates/bld_models",
    "crates/bld_core",
    "crates/bld_http",
    "crates/bld_supervisor",
    "crates/bld_runner",
    "crates/bld_server",
    "crates/bld_sock",
    "crates/bld_commands"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
anyhow = "1.0.40"
bld_config = { path = "crates/bld_config" }
bld_utils = { path = "crates/bld_utils" }
bld_commands = { path = "crates/bld_commands" }
clap = "4.0.18"
