[package]
name = "bld_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bld_config = { path = "../bld_config" }
anyhow = "1.0.40"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.26"
