[package]
name = "bld_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-web-actors = "4.1.0"
awc = { version = "3.0.0", features = ["openssl"] }
anyhow = "1.0.40"
bld_config = { path = "../bld_config" }
bld_utils = { path = "../bld_utils" }
bld_core = { path = "../bld_core" }
bld_supervisor = { path = "../bld_supervisor" }
futures = "0.3.15"
futures-util = "0.3.15"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
shiplift = "0.7.0"
tar = "0.4.35"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.36"
yaml-rust = "0.4.5"
