[package]
name = "bld_supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["v4"] }
