[package]
name = "bld_commands"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-web = { version = "4.0.1", features = ["rustls"] }
anyhow = "1.0.40"
async-signal = "0.2.5"
bld_config = { path = "../bld_config" }
bld_utils = { path = "../bld_utils" }
bld_core = { path = "../bld_core" }
bld_sock = { path = "../bld_sock" }
bld_runner = { path = "../bld_runner" }
bld_server = { path = "../bld_server" }
bld_supervisor = { path = "../bld_supervisor" }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.14"
signal-hook = "0.3.17"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.4", features = ["v4"] }
tabled = "0.9.0"
rustls = "0.20.7"
openidconnect = "3.1.1"
