[package]
name = "bld_commands"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-web = { version = "4.9.0", features = ["rustls"] }
anyhow = "1.0.93"
async-signal = "0.2.10"
bld_config = { path = "../bld_config", features = ["tokio"] }
bld_utils = { path = "../bld_utils" }
bld_core = { path = "../bld_core" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_http = { path = "../bld_http" }
bld_runner = { path = "../bld_runner", features = ["all"] }
bld_sock = { path = "../bld_sock" }
bld_server = { path = "../bld_server" }
bld_supervisor = { path = "../bld_supervisor" }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml_ng = "0.10.0"
signal-hook = "0.3.17"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.4", features = ["v4"] }
tabled = "0.9.0"
rustls = "0.20.7"
openidconnect = "3.1.1"
