[package]
name = "bld_config"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tokio = [
    "dep:tokio",
    "dep:tracing"
]

[dependencies]
anyhow = "1.0.93"
tracing = { version = "0.1.36", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.24.2", features = ["full"], optional = true }
openidconnect = "3.1.1"
