[package]
name = "bld_config"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tokio = [
    "dep:tokio",
    "dep:tracing"
]

[dependencies]
anyhow = "1.0.93"
tracing = { version = "0.1.40", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.41.1", features = ["full"], optional = true }
openidconnect = "3.1.1"
