[package]
name = "bld_core"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
anyhow = "1.0.93"
awc = { version = "3.5.1", features = ["rustls"] }
bollard = { version = "0.17.1", features = ["ssl"] }
bld_config = { path = "../bld_config" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_http = { path = "../bld_http" }
bld_utils = { path = "../bld_utils" }
bld_migrations = { path = "../bld_migrations" }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
futures = "0.3.31"
futures-util = "0.3.31"
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
serde = "1.0.215"
serde_json = "1.0.132"
async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
tar = "0.4.43"
termcolor = "1.4.1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
walkdir = "2.3.3"
openidconnect = "3.5.0"
rustls = "0.20.7"
flate2 = "1.0.28"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.26.1", features = ["process"] }
