[package]
name = "bld_dtos"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
bld_entities = { path = "../bld_entities" }
bld_utils = { path = "../bld_utils" }
serde = { version = "1.0.126", features = ["derive"] }
tabled = "0.9.0"
