[package]
name = "bld_entities"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bld_migrations = { path = "../bld_migrations" }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls"] }
tracing = "0.1.36"
