[package]
name = "bld_http"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.0", features = ["rustls"] }
anyhow = "1.0.40"
bld_config = { path = "../bld_config" }
bld_models = { path = "../bld_models" }
bld_utils = { path = "../bld_utils" }
serde = { version = "1.0.126", features = ["derive"] }
tracing = "0.1.36"
rustls = "0.20.7"
