[package]
name = "bld_http"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.0", features = ["rustls"] }
anyhow = "1.0.93"
bld_config = { path = "../bld_config", features = ["tokio"] }
bld_models = { path = "../bld_models", features = ["all"] }
bld_utils = { path = "../bld_utils" }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.36"
rustls = "0.20.7"
