[package]
name = "bld_migrations"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
name = "bld_migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4.38"
sea-orm-migration = { version = "0.12.0", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls"] }
