[package]
name = "bld_models"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web_socket = ["dep:actix"]
database = [
    "dep:anyhow",
    "dep:bld_config",
    "dep:bld_migrations",
    "dep:bld_utils",
    "dep:chrono",
    "dep:sea-orm",
    "dep:tracing",
    "dep:uuid"
]
all = ["web_socket", "database"]

[dependencies]
actix =  { version = "0.13.5", optional = true }
anyhow = { version = "1.0.93", optional = true }
bld_config = { path = "../bld_config", optional = true }
bld_migrations = { path = "../bld_migrations", optional = true }
bld_utils = { path = "../bld_utils", optional = true }
chrono = { version = "0.4.38", default-features = false, features = ["std"], optional = true }
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
serde = { version = "1.0.215", features = ["derive"] }
tracing = { version = "0.1.40", optional = true }
uuid = { version = "1.3.4", features = ["v4"], optional = true }
