[package]
name = "bld_runner"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-web-actors = "4.1.0"
anyhow = "1.0.40"
bollard = { version = "0.15.0", features = ["ssl"] }
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
bld_dtos = { path = "../bld_dtos" }
bld_http = { path = "../bld_http" }
bld_sock = { path = "../bld_sock" }
bld_utils = { path = "../bld_utils" }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
futures = "0.3.15"
futures-util = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.14"
tar = "0.4.35"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.36"
yaml-rust = "0.4.5"
uuid = { version = "1.3.4", features = ["v4"] }
regex = "1.8.1"
cron = "0.12.0"
