[package]
name = "bld_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-web-actors = "4.1.0"
anyhow = "1.0.40"
async-raft = "0.6.1"
bld_config = { path = "../bld_config" }
bld_utils = { path = "../bld_utils" }
bld_core = { path = "../bld_core" }
bld_runner = { path = "../bld_runner" }
bld_sock = { path = "../bld_sock" }
bld_supervisor = { path = "../bld_supervisor" }
diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
futures-util = "0.3.15"
futures = "0.3.15"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.36"
uuid = { version = "0.8.2", features = ["v4"] }
rustls = "0.20.7"
tabled = "0.9.0"
