[package]
name = "bld_server"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-web-actors = "4.3.0"
awc = { version = "3.5.1", features = ["rustls"] }
anyhow = "1.0.93"
bld_config = { path = "../bld_config", features = ["tokio"] }
bld_core = { path = "../bld_core" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_http = { path = "../bld_http" }
bld_runner = { path = "../bld_runner", features = ["all"] }
bld_sock = { path = "../bld_sock" }
bld_supervisor = { path = "../bld_supervisor" }
bld_utils = { path = "../bld_utils" }
chrono = "0.4.38"
futures-util = "0.3.31"
futures = "0.3.31"
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }
rustls = "0.20.7"
openidconnect = "3.5.0"
rust-embed = { version = "8.5.0", features = ["actix-web"] }
mime_guess = "=2.0.5"
