[package]
name = "bld_sock"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.0"
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-web-actors = "4.1.0"
awc = { version = "3.0.0", features = ["rustls"] }
anyhow = "1.0.93"
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_utils = { path = "../bld_utils" }
futures = "0.3.15"
futures-util = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.36"
rustls = "0.20.7"
