[package]
name = "bld_sock"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-http = "3.9.0"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-web-actors = "4.3.0"
awc = { version = "3.5.1", features = ["rustls"] }
anyhow = "1.0.93"
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_utils = { path = "../bld_utils" }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.43.1", features = ["full"] }
tracing = "0.1.40"
rustls = "0.20.7"
