[package]
name = "bld_sock"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-ws = "0.4.0"
awc = { version = "3.5.1", features = ["rustls-0_23-native-roots"] }
anyhow = "1.0.93"
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
bld_http = { path = "../bld_http" }
bld_models = { path = "../bld_models", features = ["all"] }
bld_utils = { path = "../bld_utils" }
futures = "0.3.31"
serde_json = "1.0.132"
tokio = { version = "1.43.1", features = ["full"] }
tracing = "0.1.40"
bytes = "1.11.1"
bytestring = "1.5.1"
