[package]
name = "bld_supervisor"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-web-actors = "4.1.0"
anyhow = "1.0.40"
async-trait = "0.1.50"
bollard = { version = "0.15.0", features = ["ssl"] }
bld_config = { path = "../bld_config" }
bld_core = { path = "../bld_core" }
bld_sock = { path = "../bld_sock" }
bld_utils = { path = "../bld_utils" }
futures = "0.3.15"
futures-util = "0.3.15"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version  = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.36"
uuid = { version = "1.3.4", features = ["v4"] }
rustls = "0.20.7"
