[package]
name = "bld_utils"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.40"
bld_config = { path = "../bld_config" }
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
rustls-native-certs = "0.6.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
termcolor = "1.1.2"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.36"
