[package]
name = "bld_utils"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
bld_config = { path = "../bld_config", features = ["tokio"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
termcolor = "1.4.1"
tokio = { version = "1.43.1", features = ["full"] }
tracing = "0.1.40"
